--- a/src/css/index.css
+++ b/src/css/index.css
@@ -104,12 +104,22 @@
 
 .destinations__img__container {
     width: 300px;
+    overflow: hidden;
+    border-radius: 10px;
 }
+
+
 
 .destinations__img__container img {
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    transition: transform .2s ease-in-out;
+    cursor: pointer;
+}
+
+.destinations__img__container img:hover {
+    transform: scale(1.2);
 }
 
 .destinations__items p {
