--- a/src/css/reservation.css
+++ b/src/css/reservation.css
@@ -10,6 +10,7 @@ h1 {
 
 label {
     font-family: 'Poppins';
+    font-size: .8em;
     color: white;
     text-transform: uppercase;
 }
@@ -19,6 +20,7 @@ label {
 }
 
 .img__container {
+    margin: 30px;
     width: 600px;
     height: 500px;
 }
@@ -26,13 +28,16 @@ label {
 .img__container img {
     width: 100%;
     height: 100%;
+    border-radius: 15px;
 }
 
 .title {
+    margin: 30px;
     color: white;
 }
 
 .info {
+    margin: 30px;
     display: flex;
     flex-direction: row;
     gap: 20px;
@@ -40,16 +45,16 @@ label {
 }
 
 .content__info {
+    position: relative;
+    margin-top: 50px;
     background: #131112;
     height: fit-content;
     min-height: 1000px;
 }
 
 #form {
-    width: 30%;
+    width: 400px;
     height: 300px;
-    min-width: 300px;
-    max-width: 400px;
     display: grid;
     grid-template-rows: repeat(3, 70px);
     grid-template-columns: repeat(2, auto);
@@ -57,8 +62,15 @@ label {
     "t1 t1"
     "i1 i2"
     "s1 s1";
+    gap: 20px;
     background: black;
     border-radius: 15px;
+}
+
+.form__unfixed {
+    position: absolute;
+    top: 7%;
+    right: 5%;
 }
 
 .price {
@@ -81,59 +93,45 @@ label {
 
 .form__fixed {
     position: fixed;
-    right: 0;
+    right: 5%;
     top: 10%;
 }
 
-
 .fas {
     padding-right: 10px;
-}
-
-.fas {
     color: white;
-}
-
-input[type="date"]{
-    width: fit-content;
-    padding: 6px;
-    text-align: center;
-    background: black;
-    color-scheme: white;
-    outline: none;
-    border: none;
-    color: white;
-    font-family: 'Poppins';
-}
-
-input[type="date"]::-webkit-calendar-picker-indicator {
-    filter: invert(1); 
-  }
-  
-input[type="date"]::-moz-calendar-picker-indicator {
-    filter: invert(1);
-}
-  
-input[type="date"]::-ms-calendar-picker-indicator {
-    filter: invert(1);
-
 }
 
 input[type="submit"]{
     grid-area: s1;
-    width: 100px;
-    height: 35px;
+    justify-self: center;
+    width: 90%;
+    height: 45px;
     border-radius: 10px;
     font-family: 'Poppins';
+    font-size: 1em;
+    font-weight: bold;
     background-color: #131112;
     outline: none;
     border: none;
     color: white;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
 }
+
+input[type="submit"]:hover{
+    background: white;
+    color: #131112;
+}
+
 
 .input-wrapper {
     display: flex;
     flex-direction: column;
+    justify-self: center;
+    padding: 10px;
+    border: 1px solid white;
+    border-radius: 10px;
 }
 
 .form__content {
@@ -141,3 +139,97 @@ input[type="submit"]{
     justify-content: flex-end;
 }
 
+.form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.form__description {
+    width: 600px;
+    padding-left: 30px;
+}
+
+#description {
+    width: 600px;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    font-family: 'Poppins';
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    color: white;
+}
+
+.sleep {
+    width: 100%;
+    border-bottom: 1px solid white;
+    padding-bottom: 5vh;
+}
+
+#sleep {
+    padding-top: 5vh;
+    font-family: 'Poppins';
+    font-weight: bold;
+    font-size: 1.3em;
+    color: white;
+}
+
+#sleep__content {
+    margin-top: 30px;
+    width: fit-content;
+    padding: 15px;
+    font-family: 'Poppins';
+    color: white;
+    border: 1px solid white;
+    border-radius: 10px;
+}
+
+
+.comment {
+    margin-top: 5vh;
+    width: 100%;
+    display: grid;
+    grid-auto-rows: auto;
+    grid-template-columns: repeat(2, auto);
+    gap: 20px;
+}
+
+.item__comment {
+    font-family: 'Poppins';
+    padding: 10px;
+    border-radius: 10px;
+    color: black;
+    background: white;
+}
+
+.item__comment .author {
+    font-weight: bold;
+}
+
+.map {
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    width: 100%;
+    height: 600px;
+}
+
+.slide {
+    opacity: 0;
+}
+
+
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 100%;
+    }
+}
+
+.slideAnimation {
+    animation: fadeIn 1s ease-in-out;
+    opacity: 1;
+}
