--- a/src/css/account.css
+++ b/src/css/account.css
@@ -1,7 +1,8 @@
 main {
     display: flex;
     flex-direction: row;
-    gap: 5%;
+    background: #131112;
+    height: calc(100vh - 80px);
 }
 
 .sidebar {
@@ -13,6 +14,7 @@ main {
     color: white;
     font-weight: bold;
     background: #131112;
+    border-right: 1px solid white;
 }
 
 .nav__link {
@@ -24,11 +26,12 @@ main {
 
 .informations__title  {
     font-family: 'Poppins';
+    color: white;
 }
 
 .informations__subtitle {
     font-family: 'Poppins';
-    color: rgba(0, 0, 0, .7);
+    color: rgba(255, 255, 255, .7);
     font-size: .9em;
     margin-top: 1vh;
     padding-bottom: 5vh;
@@ -99,6 +102,15 @@ form label {
 
 /* EN COURS */
 
+.book__content {
+    height: 100%;
+}
+
+.content__progress {
+    height: 90%;
+    overflow: auto;
+}
+
 .book_reservations {
     display: grid;
     grid-auto-rows: 200px;
@@ -125,8 +137,174 @@ form label {
     padding-left: 20px;
 }
 
-
-
 #item__title {
     font-weight: bold;
+}
+
+#item__link {
+    color: black;
+    padding: 5px;
+    background-color: white;
+    border-radius: 10px;
+    transition: all .2s ease-in-out;
+}
+
+#item__link:hover {
+    background: black;
+    color: white;
+}
+
+/* MESSAGERIE */
+
+.account__message {
+    display: flex;
+    flex-direction: row;
+    background: #131112;
+}
+.messages {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 10px;
+}
+.message-sent {
+    padding: 5px;
+    font-family: Poppins;
+    background: white;
+    text-align: right;
+    color: black;
+    align-self: flex-end;
+    border-radius: 10px;
+}
+
+.left-recipient {
+    width: 40%;
+    padding-right: 30px;
+    border-right: 1px solid white;
+    overflow: auto;
+}
+
+#sendMessage {
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2%;
+    border-top: 1px solid white;
+}
+
+#messageContent {
+    align-content: center;
+    background: white;
+    color: black;
+    font-family: Poppins;
+    width: 85%;
+    border-radius: 20px;
+    padding-top: 5px;
+    margin-top: 10px;
+    padding-bottom: 0;
+    padding-left: 20px;
+}
+
+#messageContent::placeholder{
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.send {
+    width: 30px;
+    height: 30px;
+    position: relative;
+}
+
+#submitBtn {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-bottom: 0;
+    border-radius: 50%;
+    padding: 0;
+    z-index: 20;
+    background: none;
+}
+
+.fa-paper-plane {
+    position: absolute;
+    font-size: 1.3em;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: black;
+    padding: 8px;
+    border-radius: 50%;
+    color: white;
+}
+
+
+
+/* Styles pour les messages reçus par l'utilisateur actuel */
+.message-received {
+    padding: 5px;
+    font-family: Poppins;
+    background: white;
+    text-align: left;
+    color: black;
+    border-radius: 10px;
+    width: fit-content;
+    align-self: flex-start;
+    margin-left: 10px;
+}
+
+.recipient {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.recipient__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    width: 80px;
+    height: 30px;
+    text-align: center;
+    background: white;
+    font-family: Poppins;
+    color: black;
+    margin-bottom: 5px;
+    border: 1px solid transparent;
+    transition: all .2s ease-in-out;
+}
+
+.recipient__item:hover {
+    background: none;
+    color: white;
+    border: 1px solid white;
+    cursor: pointer;
+}
+
+.messages__wrapper {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 400px;
+}
+
+.messages {
+    height: 400px;
+    overflow: auto;
+    padding-right: 10px;
+}
+
+.messages::-webkit-scrollbar     {
+    background: white;
+    width: 7px;
+}
+
+.messages::-webkit-scrollbar-thumb {
+    background: black;
+    border-radius: 10px;
+    cursor: pointer;
 }
