--- a/src/css/reservation.css
+++ b/src/css/reservation.css
@@ -14,6 +14,27 @@ label {
     color: white;
     text-transform: uppercase;
 }
+
+button {
+    font-family: Poppins;
+    font-weight: bold;
+    background: #131112;
+    color: white;
+    width: fit-content;
+    padding: 10px;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    justify-self: center;
+    transition: all .2s ease-in-out;
+    cursor: pointer;
+}
+
+
+button:hover {
+    background: white;
+    color: black;
+}
 .content {
     display: grid;
     grid-template-rows: repeat(3, auto);
@@ -54,14 +75,9 @@ label {
 
 #form {
     width: 400px;
-    height: 300px;
+    height: fit-content;
     display: grid;
-    grid-template-rows: repeat(3, 70px);
-    grid-template-columns: repeat(2, auto);
-    grid-template-areas: 
-    "t1 t1"
-    "i1 i2"
-    "s1 s1";
+    grid-template-rows: repeat(4, auto);
     gap: 20px;
     background: black;
     border-radius: 15px;
@@ -74,7 +90,6 @@ label {
 }
 
 .price {
-    grid-area: t1;
     color: white;
     font-family: 'Poppins';
     font-weight: bold;
@@ -103,7 +118,6 @@ label {
 }
 
 input[type="submit"]{
-    grid-area: s1;
     justify-self: center;
     width: 90%;
     height: 45px;
@@ -124,15 +138,37 @@ input[type="submit"]:hover{
     color: #131112;
 }
 
+input[type="text"]{
+    width: 100%;
+    height: 100%;
+    background: none;
+    border: none;
+    outline: none;
+    font-family: 'Poppins';
+    color: white;
+}
+
+#inputs-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; /* Ajoute cette ligne */
+
+    align-items: flex-start;
+    margin: 0 auto;
+    gap: 5px;
+}
+
 
 .input-wrapper {
     display: flex;
     flex-direction: column;
     justify-self: center;
-    padding: 10px;
+    padding: 5px;
     border: 1px solid white;
-    border-radius: 10px;
+    border-radius: 5px;
+    cursor: pointer;
 }
+
 
 .form__content {
     display: flex;
@@ -151,6 +187,14 @@ input[type="submit"]:hover{
     padding-left: 30px;
 }
 
+.date__errors {
+    font-family: Poppins;
+    color: red;
+    justify-self: center;
+    display: none;
+    height: fit-content;
+}
+
 #description {
     width: 600px;
     padding-top: 5vh;
@@ -158,7 +202,7 @@ input[type="submit"]:hover{
     font-family: 'Poppins';
     border-top: 1px solid white;
     border-bottom: 1px solid white;
-    color: white;
+    color: rgb(202, 159, 159);
 }
 
 .sleep {
@@ -233,3 +277,79 @@ input[type="submit"]:hover{
     animation: fadeIn 1s ease-in-out;
     opacity: 1;
 }
+
+
+.ui-datepicker{
+    font-family: 'Poppins';
+    background: black;
+}
+
+.ui-datepicker-title {
+    color: white;
+    font-family: 'Poppins';
+    font-weight: 400;
+}
+
+.ui-datepicker-header {
+    background-color: black !important;
+    border: none;
+}
+
+.messages__content {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 300px;
+    background: black;
+    color: white;
+    z-index: 10;
+    border-radius: 20px;
+    padding: 15px;
+}
+
+
+#message__form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#submitBtn {
+    margin: 0 auto;
+}
+#close {
+    padding: 5px;
+    margin: 10px;
+    text-align: right;
+    background: white;
+    border-radius: 5px;
+    width: fit-content;
+    height: fit-content;
+    color: black;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+    border: 1px solid transparent;
+}
+
+#close:hover {
+    background: black;
+    color: white;
+    border: 1px solid white;
+}
+
+#messageContent {
+    background: #131112;
+    color: white;
+    font-family: Poppins;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+#submitBtn {
+    width: fit-content;
+}
+
+
+
